-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.1
-
-
4dded9a0db32ac30a5dee506f7a55ec755dd5c39 (qt/qtdeclarative/dev) 8c30227cc9 (qt/qtdeclarative/6.2) 8c30227cc9 (qt/tqtc-qtdeclarative/6.2)
When you have a QML file where the id is assigned to a string, qmllint will have a segfault.
Example qml file:
```
Button
```
Tested with Qt 6.2.0 and 6.2.1 on Ubuntu 20.04.03
| For Gerrit Dashboard: QTBUG-98115 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 380560,4 | QQmlJSImportVisitor: handle ids correctly | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 380586,4 | QQmlJSImportVisitor: handle ids correctly | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |