src/qmlcompiler/qqmljsimportvisitor.cpp
@@ -1301,8 +1301,17 @@ bool QQmlJSImportVisitor::visit(UiScriptBinding *scriptBinding)
     const auto id = scriptBinding->qualifiedId;
     const auto *statement = cast<ExpressionStatement *>(scriptBinding->statement);
     if (!id->next && id->name == QLatin1String("id")) {
-        const auto *idExpression = cast<IdentifierExpression *>(statement->expression);
-        const QString &name = idExpression->name.toString();
+        const QString name = [&]() {
+            if (const auto *idExpression = cast<IdentifierExpression *>(statement->expression))
+                return idExpression->name.toString();
+            else if (const auto *idString = cast<StringLiteral *>(statement->expression)) {
+                m_logger->logInfo(u"ids do not need quotation marks"_qs, Log_Syntax, idString->firstSourceLocation());
+                return idString->value.toString();
+            }
+            m_logger->logWarning(u"Failed to parse id"_qs, Log_Syntax, statement->expression->firstSourceLocation());
+            return QString();
+
+        }();
         m_scopesById.insert(name, m_currentScope);
 
         // TODO: Discard this once we properly store binding values and can just use
