tests/auto/qml/qmllint/data/stringIdUsedInWarning.qml
@@ -1,0 +1,9 @@
+import QtQml
+
+QtObject {
+    id: "stringy"
+    property int i
+    property QtObject o: QtObject {
+        Component.onCompleted: console.log(i)
+    }
+}
